# 2021-tfm-pedro-arias

./: .gitignore  README.md  cl_wrapper.py  config.yaml  iris_rqt.launch  simple_takeoff.py
follow_color/: CMakeLists.txt  README.md  build.sh  color_filter.py  follow_color.launch  follow_color.world  my_solution.py  package.xml
follow_color/launch/: follow_color.launch  follow_color_teleop.launch
follow_color/models/teleop_target/: model.config  model.sdf
follow_color/plugins/: target.cc
follow_color/src/: teleop_target.py
follow_color/worlds/: follow_color_teleop.world
follow_person/: CMakeLists.txt  build.sh  my_generic_solution.py  my_solution.py  my_solution_tello.py  package.xml  test.py  test_fps.py  test_solution.py  yolo_utils.py  yolov4.py
follow_person/config/: px4_real.conf  sim.conf  tello.conf
follow_person/launch/: follow_person.launch  follow_polar_person.launch  px4_real_follow.launch  px4_real_follow_record.launch  static_person.launch  tello_follow.launch  two_person.launch
follow_person/models/polar_person/: model.sdf
follow_person/models/static_person/: model.config  model.sdf
follow_person/perspectives/: follow_person.perspective
follow_person/plugins/: person.cc  polar_person.cc
follow_person/worlds/: follow_polar_person.world  static_person.world  two_person.world
px4_real/: config.yml  mylaunch.launch  param_mylaunch.launch  wrp_mavros.launch  yolo_utils.py
px4_real/launch/: px4_real.launch
px4_real/test/: arm_test.py  dw_test.py  tk_test.py  yaw_test.py
tello_driver/: CMakeLists.txt
tello_driver/launch/: tello_code.launch  tello_driver.launch  tello_rqt.launch  tello_wrapper.launch
tello_driver/src/: tello_driver_node.py  tello_driver_node_old.py  tello_driver_sdk_node.py
tello_driver/test/: emergency_land.py  emergency_quit.py  follow_color.py  follow_color_w.py  latency_test.py  my_solution.py  test_pubs.py  test_tello_driver.py  test_wrapper.py
tfm/latex/: abstract.tex  dedication.tex  glossary.tex  main.tex  output.xmpdata  preamble.tex  refs.bib  title.tex
tfm/latex/code/: cmd.xml  dw-simple.py  fc-pseudo.txt  fp-pseudo.txt  heartbeat.xml  iris.conf  positiontarget.msg  video_bridge.py
tfm/latex/sections/: 01-intro.tex  02-herram.tex  03-metodo.tex  04-infra.tex  05-aplic.tex  06-concl.tex
utils/: bash_ros_setup.sh  jnvconn.sh
victure_driver/: CMakeLists.txt  package.xml
victure_driver/launch/: victure.launch
victure_driver/src/: video_bridge.py
victure_driver/test/: test_video_bridge.py  video_test.py
