<?xml version="1.0"?>
<package format="2">
  <name>follow_person</name>
  <version>0.0.0</version>
  <description>The follow_person package</description>

  <maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>
  <author email="pedroariasperez96@gmail.com">Pedro Arias</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
